# mogiri

./: .gitignore  .python-version  CLAUDE.md  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mogiri.service
migrations/versions/: 02715a2e718b_add_pid_to_execution.py  2db1b386fcc7_add_workflow_schedule_and_execution_.py  30c7ccfd56a4_add_working_dir_to_job.py  5601549f7a15_add_max_iterations_to_workflow.py  a1b2c3d4e5f6_add_node_key_to_edges_and_executions.py  b696b2e909f1_add_job_timeout_seconds.py  b7121403b8bc_replace_chains_with_workflows.py  c3a7f1b2d4e6_add_env_vars_to_workflow.py  ca2f9304207c_initial_schema.py  d5b8e2f3a1c7_move_env_vars_to_node_positions.py  d998a9c4c65b_allow_multiple_job_instances_in_workflow.py  eeb72410b688_add_settings_table.py  f2f45507bd84_add_job_chains.py
samples/: README.md  ai_log_analyzer.py  ai_summarize.sh  claude_usage_check.py  db_backup.py  disk_usage_alert.sh  http_health_check.py  pushover_notify.py  slack_thread_post.py
src/mogiri/: __init__.py  app.py  cli.py  config.py  models.py  mogiricli.py  scheduler.py
src/mogiri/routes/: __init__.py  api.py  auth.py  chains.py  dashboard.py  executions.py  jobs.py  settings.py
src/mogiri/static/: style.css
src/mogiri/templates/: base.html  dashboard.html  login.html
src/mogiri/templates/chains/: editor.html  history.html  list.html  new.html
tests/: conftest.py  test_api.py  test_api_auth.py  test_auth_password.py  test_chains.py  test_csrf.py  test_migrations.py  test_models.py  test_routes.py  test_scheduler.py
(+7 files in other folders)
